# stripy

./: .buildinfo  .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Changelog  Changelog.md  Dockerfile  FrontPage.html  Licence.txt  MANIFEST  MANIFEST.in  README.md  _stripy.pyf  bash_utils.sh  build-dockerfile.sh  build-wrapper-dockerfile.sh  cartesian.html  cartesian_meshes.html  documentation.html  genindex.html  hybrid_st_meshes.html  index.html  meson.build  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  spherical.html  spherical_meshes.html  swpcom.mod.not
.github/workflows/: CI.yml  build.yml  build.yml_disabled  build_and_test.yml  build_deploy_jbdoc.yml  build_deploy_pdoc.yml  build_deploy_pdoc_pip.yml  build_deploy_pdoc_pip.yml_disabled  conda_deploy.yml  conda_test_build.yml  pypi.yml  python_build_test.yml  python_conda_build_test.yml  python_conda_build_test.yml.disable  python_conda_upload.yml  python_deploy_release_pypi.yml  python_mac_build_test.yml  python_mac_upload_wheel_pypi.yml  python_pip_build_test.yml  python_pypi_upload_macos_wheel.yml  python_pypi_upload_mlinux_wheel.yml  python_pypi_upload_source.yml  python_pypi_upload_wheel.yml  python_pypi_upload_windows_wheel.yml  python_upload_wheel_pypi.yml
2.0.5b1/stripy/: cartesian.html  hybrid_st_meshes.html  spherical.html  spherical_meshes.html
2.0.5b2/: .buildinfo  FrontPage.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
2.0.5b2/SphericalMeshing/: 0-Stripy.html
2.0.5b2/_sources/: FrontPage.md
2.0.5b2/api/: documentation.html
2.0.5b2_api/: hybrid_st_meshes.html
2.1.0/: .buildinfo  FrontPage.html  genindex.html  search.html  searchindex.js
2.1.0/SphericalMeshing/: 0-Stripy.html
2.1.0_api/: cartesian.html
2.1.0b1/: .buildinfo  FrontPage.html  genindex.html  search.html  searchindex.js
2.1.0b1/SphericalMeshing/: 0-Stripy.html
2.2/: index.html  objects.inv  searchindex.js
2.3.2/: genindex.html  searchindex.js
2.3.3/: .buildinfo  FrontPage.html  genindex.html  search.html  searchindex.js
2.3.3/SphericalMeshing/: 0-Stripy.html
Docker/: Dockerfile  Dockerfile-khub  WrapperDockerfile  build-dockerfile-khub.sh  build-dockerfile.sh  install_notebooks.py
Docker/base/: Dockerfile  Dockerfile-alpine  Dockerfile-debian  Dockerfile-debian-slim
Docker/scripts/: bash_utils  bash_utils.sh  bash_utils_template.sh  build-base-dockerfile.sh  help  help_template.txt  run-jupyter.sh  xvfb-run
Notebooks/: 0-StartHere.ipynb  CartesianTriangulations  SphericalTriangulations  litho1pt0
Notebooks/CartesianTriangulations/: Ex2-CartesianGrids.ipynb  Ex3-Interpolation.ipynb  Ex4-Gradients.ipynb  Ex5-Smoothing.ipynb  Ex6-Scattered-Data.ipynb
Notebooks/Data/: HeatFlowGlobal2010.csv
Notebooks/Litho1pt0/: Ex1-Litho1Layers.ipynb  Ex2-Litho1Properties.ipynb  Ex3-CrustalRegionalisation.ipynb
Notebooks/SphericalTriangulations/: Derivatives.ipynb  ETOPO1-workflow.ipynb  Ex1-Spherical-Triangulations.ipynb  Ex2-SphericalGrids.ipynb  Ex3-Interpolation.ipynb  Ex4-Gradients.ipynb  Ex5-Smoothing.ipynb  Ex6-Heat-Maps.ipynb  Ex6-Scattered-Data.ipynb  Ex7-Refinement-of-Triangulations.ipynb  Spherical-PointData-broken.ipynb  Spherical-PointData.ipynb  Spherical-Regional-PointData.ipynb  SphericalGrids+AdaptiveRefinement.ipynb  SphericalGrids+Data.ipynb  SphericalGrids.ipynb
Notebooks/WorkedExamples/: Spherical-PointData.ipynb
SphericalMeshing/: 0-Stripy.html
SphericalMeshing/CartesianTriangulations/: 0-Cartesian.html  Ex1-Cartesian-Triangulations.html  Ex2-CartesianGrids.html  Ex3-Interpolation.html  Ex4-Gradients.html  Ex5-Smoothing.html  Ex6-Scattered-Data.html  Ex7-Refinement-of-Triangulations.html  Ex8-Spline-Tension.html  Ex9-Voronoi-Diagram.html
SphericalMeshing/Litho1pt0/: Ex1-Litho1Layers.html  Ex2-Litho1Properties.html  Ex3-CrustalRegionalisation.html  WorkEx1-CratonAverageProperties.html  WorkEx2-OceanDepthAge.html
SphericalMeshing/SphericalTriangulations/: 0-Spherical.html  Ex1-Spherical-Triangulations.html  Ex2-SphericalGrids.html  Ex3-Interpolation.html  Ex4-Gradients.html  Ex5-Smoothing.html  Ex6-Scattered-Data.html  Ex7-Refinement-of-Triangulations.html  Ex8-Spline-Tension.html  Ex9-Voronoi-Diagram.html
_sources/SphericalMeshing/: 0-Stripy.ipynb  0-Stripy.md
_static/: customize.css  font_button.js
binder/: Dockerfile  Dockerfile_deprecated  apt.txt  environment.yml
broken/: stripack2.f90  stripy.pyf
conda/: meta.yaml
docs/: README.md  build_pdocs.sh  cartesian.html  cartesian_meshes.html  documentation.html  hybrid_st_meshes.html  index.html  spherical.html  spherical_meshes.html
docs/source/: conf.py  index.rst
docs/stripy/: cartesian_meshes.html  index.html
docs/tests/: index.html  test_0_imports.html  test_1a_spherical_mesh_examples.html  test_1b_cartesian_mesh_examples.html  test_1c_warped_xy_meshes.html  test_Triangulation.html  test_routines.html  test_sTriangulation.html
f77-source/TOPS751/: 751.sh
f77-source/TOPS752/: 752.sh
f77-source/TOPS772/: 772.sh
f77-source/TOPS773/: 773.sh
f77-src/: tripack.f
images/k3d/: icosohedron_example.html
jupyterbook/: FrontPage.md  JupyterBook.bib  _config.yml  _toc.yml  build-book.sh
litho1pt0-src/: MANIFEST.in  README.md  setup.py
paper/: Notes.md  paper.bib  paper.md
pycrust-src/: MANIFEST.in  README.md  setup.cfg  setup.py
src/: srfpack.f  srfpack.f90  srfpack.pyf  ssrfpack.f  ssrfpack.f90  ssrfpack.pyf  stripack.f90  stripack.pyf  stripyf.f90  stripyf.pyf  tripack.f90  tripack.pyf
src/f77/: ssrfpack.f  (+1 more)
stripy/: __init__.py  _strimesh.py  _trimesh.py  cartesian.py  cartesian_meshes.py  documentation.py  hybrid_st_meshes.py  spherical.py  spherical_meshes.py
stripy-src/: README.md  setup.cfg  setup.py
test/: test_Triangulation.py  test_sTriangulation.py
tests/: fib_test.py  test_0_imports.py  test_1a_spherical_mesh_examples.py  test_1b_cartesian_mesh_examples.py  test_1c_hybrid_mesh_latlon.py  test_1c_warped_xy_meshes.py  test_Triangulation.py  test_imports.py  test_mesh_examples.py  test_routines.py  test_sTriangulation.py
(+402 files in other folders)
